grammar.js
    document: ($) =>
      seq(
        repeat(prec(10, choice($._blank_lines, $._comments))),
        choice(
          optional(
            seq(
              $.document_header,
              optional(seq($._blank_lines, $.document_body)),
            ),
          ),
          optional($.document_body),
        ),
      ),

    // ------------------------------------------------------------------------

    // Header
    //
    // 1. Document Title
    // 2. (optional) Comments
    // 3. (optional) Authors or Authors + (Comments) + Revision
    // 4. (optional) Document Attributes
    //
    document_header: ($) =>
      prec.right(
        seq(
          // Document Title
          $.document_title,
          // (optional) Comments
          optional($._comments),
          // (optional) Authors or Authors + (Comments) + Revision
          optional(
            seq(
              $.document_authors,
              optional(seq(optional($._comments), $.document_revision)),
            ),
          ),
          // (optional) Document Attributes
          optional($._document_attributes),
        ),
      ),

    // Document title
    document_title: ($) =>
      prec(
        2,
        seq($.document_title_marker, " ", $.document_title_content, $._newline),
      ),
    document_title_marker: (_) => prec(2, "="),
    document_title_content: ($) => $.inline,
    // Document authors
    document_authors: ($) => seq(/[^:=\n]/, $._line),
    // Document revision
    document_revision: ($) => seq(/[^:=\n]/, $._line),
    // Document attributes
    _document_attributes: ($) =>
      repeat1(choice($._comments, $.document_attribute, $.macro)),

    // ------------------------------------------------------------------------

    // Body
    document_body: ($) =>
      repeat1(
        choice(
          $._section,
          // alias(prec.right(repeat1($._block_not_section)), $.section),
          prec.right(repeat1($._block_not_section)),
        ),
      ),

    // ------------------------------------------------------------------------

    // Document Attributes
    // - https://docs.asciidoctor.org/asciidoc/latest/attributes/document-attributes/
    //
    // TODO:
    // - handling of incorrect attributes (e.g. missing last `:`)
    // - inline attributes `{...}`
    //
    // _attribute: ($) => choice($.attribute /*, $.no_attribute*/),
    document_attribute: ($) =>
      seq(
        ":",
        optional($.attribute_unset),
        $.attribute_name,
        ":",
        optional(seq(" ", $.attribute_value)),
        // optional($.attribute_value),
        $._newline,
      ),
    attribute_unset: (_) => "!",
    attribute_name: ($) => $._attribute_name,
    // attribute_value: ($) => repeat1($._char),
    attribute_value: ($) => $.inline,

    // ------------------------------------------------------------------------

    // Element Attributes
    // - https://docs.asciidoctor.org/asciidoc/latest/attributes/positional-and-named-attributes/
    //
    // - Element Attribute
    //
    //   - option: `[%linenums,ruby]`
    //   - positional attribute: `[,ruby,linenums]`
    //
    //   - Shorthands:
    //     - `#` ... ID for `id=`
    //     - `.` ... role for `role=`
    //     - `%` ... option for `option=`

    element_attributes: ($) => $._attribute_list,

    // _attribute_list: (_) => token(seq("[", /[^\]\r\n]*/, "]", /\r?\n/)),

    _attribute_list: ($) =>
      seq(
        "[",
        optional(
          seq($._attribute_unparsed, repeat(seq(",", $._attribute_unparsed))),
        ),
        "]",
        // FIX: Problem: `[attribute]...` is recognized as an element_attribute,
        //      but should be an inline node.
        /[ \t]*/, // HACK: Workaround for `[attribute]...` / `[attribute] ...`
        $._newline,
      ),
    _section: ($) =>
      choice(
        $.part,
        $.section_level1,
        $.section_level2,
        $.section_level3,
        $.section_level4,
        $.section_level5,
      ),

    part: ($) =>
      prec.right(
        seq(
          optional($.element_attributes),
          $.part_header,
          repeat(
            choice(
              choice(
                $.section_level1,
                $.section_level2,
                $.section_level3,
                $.section_level4,
                $.section_level5,
              ),
              $._block_not_section,
            ),
          ),
        ),
      ),

    section_level1: ($) =>
      prec.right(
        seq(
          optional($.element_attributes),
          alias($.section_level1_header, $.section_header),
          repeat(
            choice(
              choice(
                $.section_level2,
                $.section_level3,
                $.section_level4,
                $.section_level5,
              ),
              $._block_not_section,
            ),
          ),
        ),
      ),

    section_level2: ($) =>
      prec.right(
        seq(
          optional($.element_attributes),
          alias($.section_level2_header, $.section_header),
          repeat(
            choice(
              choice($.section_level3, $.section_level4, $.section_level5),
              $._block_not_section,
            ),
          ),
        ),
      ),

    section_level3: ($) =>
      prec.right(
        seq(
          optional($.element_attributes),
          alias($.section_level3_header, $.section_header),
          repeat(
            choice(
              choice($.section_level4, $.section_level5),
              $._block_not_section,
            ),
          ),
        ),
      ),

    section_level4: ($) =>
      prec.right(
        seq(
          optional($.element_attributes),
          alias($.section_level4_header, $.section_header),
          repeat(choice($.section_level5, $._block_not_section)),
        ),
      ),

    section_level5: ($) =>
      prec.right(
        seq(
          optional($.element_attributes),
          alias($.section_level5_header, $.section_header),
          repeat($._block_not_section),
        ),
      ),

    part_header: ($) =>
      prec(
        1,
        seq(
          alias($.section_level0_header_marker, $.part_header_marker),
          " ",
          alias($.section_header_content, $.part_header_content),
          $._newline,
        ),
      ),

    section_header_content: ($) => $.inline,

    // ------------------------------------------------------------------------

    _block_not_section: ($) =>
      prec.left(choice($._block_content, $.catch_unresolved)),

    _block_content: ($) =>
      repeat1(
        prec.left(
          choice(
            $._blank_lines,
            $._comments,
            $.document_attribute,
            $.id_attributes,
            $.page_break,
            $.break,
            $.conditional,
            $.admonition,
            // Blocks with context (e.g. title, attributes, etc.)
            $.context,
            // $.paragraph,
            // $.list,
            // $.table,
            // $.macro,
            // $._block,
            // Fallback for standalone context content (e.g. title, attributes, etc.).
            prec(-1, $.title),
            prec(-1, $.element_attributes),
          ),
        ),
      ),

    context: ($) =>
      seq(
        // repeat1(choice($.title, $.element_attributes)),
        repeat(choice($.title, $.element_attributes)),
        choice($.paragraph, $.list, $.table, $.macro, $._block),
      ),
    _comments: ($) => prec.right(repeat1($.comment)),

    // One comment type
    comment: ($) =>
      prec.left(
        choice($._comment_line, $._comment_block, $._comment_block_style),
      ),

    // Comment Types
    // Line style
    _comment_line: ($) => seq("//", choice($._newline, $._line)),
    // Block style
    _comment_block: ($) =>
      seq(
        token(seq("////", /\r?\n/)),
        repeat(prec.left(choice($._line, $._blank_lines))),
        token(seq("////", /\r?\n/)),
      ),
    // Open Block or Paragraph style
    _comment_block_style: ($) =>
      seq($._comment_attributes, $._newline, choice($.open_block, $.paragraph)),
    break: ($) => seq($.break_marker, $._newline),
    page_break: ($) => seq($.page_break_marker, $._newline),
    macro: ($) =>
      seq(
        $.macro_name,
        "::",
        $.macro_target,
        seq("[", optional($.macro_attributes), "]"),
        $._newline,
      ),
    macro_name: (_) => choice("image", "audio", "video", "include", "plantuml"),
    // macro_name: ($) => $._macro_name, // FIX: Problem with other nodes start with chars.
    macro_target: (_) => /[^\[]+/,
    macro_attributes: (_) => /[^\]]+/,

    // ------------------------------------------------------------------------

    // Titles
    // - [x] Only recognize syntax
    // - [ ] Reference to the next block
    // title: ($) => seq(".", /[^\s]/, repeat($._char), $._newline),
    // title: ($) => seq(".", $._no_white_space, $._line),
    _block: ($) =>
      seq(
        // optional($.element_attributes),
        choice(
          $.open_block,
          $.listing_block,
          $.literal_block,
          $.sidebar_block,
          $.example_block,
          $.pass_block,
        ),
      ),

    // ---------------------------------

    // Open Block (only block style)
    open_block: ($) =>
      prec.left(
        seq(
          alias($.open_block_marker, $.open_block_marker_start),
          optional($._block_content),
          alias($.open_block_marker, $.open_block_marker_end),
        ),
      ),
    listing_block: ($) =>
      seq(
        choice($._listing_block, $._listing_block_style),
        repeat($.listing_callout),
      ),

    // Callout
    listing_callout: ($) => seq($.callout_marker, " ", $.callout_content),
    callout_content: ($) => prec.right(repeat1($._line_with_newline)),
    callout_marker: (_) => /<[0-9]+>/,

    // Block style
    _listing_block: ($) =>
      seq(
        optional($.source_attributes),
        alias($.listing_block_marker, $.listing_block_marker_start),
        optional($.listing_block_content),
        alias($.listing_block_marker, $.listing_block_marker_end),
      ),
    source_attributes: ($) =>
      seq(
        "[",
        alias("source", $.source_attribute_name), //optional("source"),
        optional(
          seq(
            ",",
            optional($._white_space),
            field("language", $.attribute_name),
            optional($._white_space),
            repeat(seq(",", /[^,\]\n]*/)), // catch unresolved attributes
          ),
        ),
        "]",
        $._newline,
      ),

    // Open Block or Paragraph style
    _listing_block_style: ($) =>
      seq(
        alias($._listing_attributes, $.element_attributes),
        $._newline,
        choice($.open_block, $.paragraph),
      ),
    literal_block: ($) => choice($._literal_block, $._literal_block_style),

    // Block style
    _literal_block: ($) =>
      prec.left(
        seq(
          alias($.literal_block_marker, $.literal_block_marker_start),
          optional($._block_content),
          alias($.literal_block_marker, $.literal_block_marker_end),
        ),
      ),
    _literal_block_style: ($) =>
      seq(
        alias($._literal_attributes, $.element_attributes),
        $._newline,
        choice($.open_block, $.paragraph),
      ),
    sidebar_block: ($) => choice($._sidebar_block, $._sidebar_block_style),

    // Block style
    _sidebar_block: ($) =>
      prec.left(
        seq(
          alias($.sidebar_block_marker, $.sidebar_block_marker_start),
          optional($._block_content),
          alias($.sidebar_block_marker, $.sidebar_block_marker_end),
        ),
      ),
    _sidebar_block_style: ($) =>
      seq(
        alias($._sidebar_attributes, $.element_attributes),
        $._newline,
        choice($.open_block, $.paragraph),
      ),
    example_block: ($) => choice($._example_block, $._example_block_style),

    // Block style
    _example_block: ($) =>
      choice(
        $._example_block_level1,
        $._example_block_level2,
        $._example_block_level3,
        $._example_block_level4,
      ),

    // Level 1
    _example_block_style: ($) =>
      seq(
        alias($._example_attributes, $.element_attributes),
        $._newline,
        choice($.open_block, $.paragraph),
      ),
    pass_block: ($) => choice($._pass_block, $._pass_block_style),

    // Block style
    _pass_block: ($) =>
      prec.left(
        seq(
          alias($.pass_block_marker, $.pass_block_marker_start),
          optional($._block_content),
          alias($.pass_block_marker, $.pass_block_marker_end),
        ),
      ),
    _pass_block_style: ($) =>
      seq(
        alias($._pass_attributes, $.element_attributes),
        $._newline,
        $.paragraph,
      ),
    paragraph: ($) => $._lines,

    // ------------------------------------------------------------------------

    // Lists
    // - https://docs.asciidoctor.org/asciidoc/latest/lists/unordered/
    //
    // TODO:
    // - [x] Identify a simple list line
    // - [x] Don't recognize `+**.*` as list marker
    // - [x] List with list items
    // - [ ] Nested list items context

    list: ($) => prec.right(repeat1($.list_item)),

    list_item: ($) => seq($.list_item_marker, $.list_item_content),

    list_item_marker: (_) =>
      token(seq(choice(/[-]+/, /[*]+/, /[.]+/, /[0-9]+./), " ")),
    // list_item_marker: (_) =>
    //   token(seq(/[ ]*/, choice(/[-]+/, /[*]+/, /[.]+/), " ")),

    list_item_content: ($) =>
      seq($._lines, repeat($._list_continuation_content)),

    _list_continuation_content: ($) =>
      seq(
        $.list_continuation_marker,
        choice(
          alias($.context_without_list, $.context),
          $.admonition,
          $.id_attributes,
        ),
      ),

    list_continuation_marker: (_) => choice("+\n", "+\r\n"),

    // ------------------------------------------------------------------------

    // Description Lists
    // - https://docs.asciidoctor.org/asciidoc/latest/lists/description/

    // description_list: ($) =>
    // description_list_marker: (_) => choice(/::/, /:::/, /::::/, /;;/),

    // ------------------------------------------------------------------------

    // Admonitions

    // admonition: ($) =>
    //   choice(
    //     $.admonition_note,
    //     $.admonition_tip,
    //     $.admonition_important,
    //     $.admonition_caution,
    //     $.admonition_warning,
    //   ),

    admonition: ($) => choice($._admonition_line, $._admonition_block_style),

    // Line
    _admonition_line: ($) => seq($.admonition_marker, ":", $._lines),

    // Example Block, Open Block or Paragraph style
    _admonition_block_style: ($) =>
      seq(
        $.admonition_attributes,
        optional($.title),
        choice($.example_block, $.open_block, $.paragraph),
      ),

    admonition_attributes: ($) =>
      seq("[", $.admonition_marker, "]", $._newline),

    admonition_marker: (_) =>
      choice("NOTE", "TIP", "IMPORTANT", "CAUTION", "WARNING"),

    // ------------------------------------------------------------------------

    // Conditionals
    // - https://docs.asciidoctor.org/asciidoc/latest/directives/conditionals/
    //
    // TODO:
    // - [ ] Support single line and block style

    conditional: ($) =>
      choice($._conditional_simple, $._conditional_ifeval_simple),
    // conditional: ($) => choice($.conditional_block, $.conditional_line),

    // ifdef, ifndef, endif
    _conditional_simple: ($) =>
      seq(
        $.conditional_name,
        "::",
        optional($._conditional_attributes),
        alias("[", $.conditional_bracket),
        optional($.conditional_content),
        alias("]", $.conditional_bracket),
        $._newline,
      ),
    conditional_name: (_) => choice("ifdef", "ifndef", "endif"),
    conditional_content: (_) => /[^\]\n]+/,

    // ifeval
    _lines: ($) => prec.right(repeat1($._line)),
