test/corpus/22_part_and_sections.txt
==================
Sections 1 to 5
==================

== Section 1
=== Section 2
==== Section 3
===== Section 4
====== Section 5

---

(document
  (document_body
    (section_level1
      (section_header
        (section_header_marker)
        (section_header_content
          (inline)))
      (section_level2
        (section_header
          (section_header_marker)
          (section_header_content
            (inline)))
        (section_level3
          (section_header
            (section_header_marker)
            (section_header_content
              (inline)))
          (section_level4
            (section_header
              (section_header_marker)
              (section_header_content
                (inline)))
            (section_level5
              (section_header
                (section_header_marker)
                (section_header_content
                  (inline))))))))))

==================
Document Title + Part + Sections 1 to 5
==================

= Document Title

= Part
== Section 1
=== Section 2
==== Section 3
===== Section 4
====== Section 5

---

(document
  (document_header
    (document_title
      (document_title_marker)
      (document_title_content
        (inline))))
  (document_body
    (part
      (part_header
        (part_header_marker)
        (part_header_content
          (inline)))
      (section_level1
        (section_header
          (section_header_marker)
          (section_header_content
            (inline)))
        (section_level2
          (section_header
            (section_header_marker)
            (section_header_content
              (inline)))
          (section_level3
            (section_header
              (section_header_marker)
              (section_header_content
                (inline)))
            (section_level4
              (section_header
                (section_header_marker)
                (section_header_content
                  (inline)))
              (section_level5
                (section_header
                  (section_header_marker)
                  (section_header_content
                    (inline)))))))))))
