test/corpus/23_breaks.txt
==================|||
Break
==================|||

'''

---|||

(document
  (document_body
    (break)))

==================|||
Breaks (Markdown)
==================|||

---
- - -
***
* * *

---|||

(document
  (document_body
    (break)
    (break)
    (break)
    (break)))

==================|||
Page Break
==================|||

<<<

---|||

(document
  (document_body
    (page_break)))
