test/corpus/24_comments.txt
==================
Comment Line Style
==================

// Comment

---

(document
  (comment
    (inline)))

==================
Comment Block Style
==================

////
Comment
////

////
Comment text
Comment text

Comment text
////

---

(document
  (comment
    (inline))
  (comment
    (inline)
    (inline)
    (inline)))

==================
Comment Open Block Style
==================

[comment]
--
Comment text
--

[comment]
--
Comment text
Comment text

Comment text
--

---

(document
  (comment
    (open_block
      (open_block_marker_start)
      (context
        (paragraph
          (inline)))
      (open_block_marker_end)))
  (comment
    (open_block
      (open_block_marker_start)
      (context
        (paragraph
          (inline)
          (inline)))
      (context
        (paragraph
          (inline)))
      (open_block_marker_end))))

==================
Comment Paragraph Style
==================

[comment]
Comment text

---

(document
  (comment
    (paragraph
      (inline))))

==================
Comment (multiple)
==================

// Comment text

[comment]
Comment text

// Comment text

[comment]
--
Comment text
Comment text

Comment text
--
////
Comment text
Comment text

Comment text
////

---

(document
  (comment
    (inline))
  (comment
    (paragraph
      (inline)))
  (comment
    (inline))
  (comment
    (open_block
      (open_block_marker_start)
      (context
        (paragraph
          (inline)
          (inline)))
      (context
        (paragraph
          (inline)))
      (open_block_marker_end)))
  (comment
    (inline)
    (inline)
    (inline)))
