test/corpus/25_blocks.txt
==================|||
Open Block
==================|||

--
Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint.
--

--
Lorem ipsum dolor sit amet,

qui minim labore adipisicing minim sint.
--

---|||

(document
  (document_body
    (block_context
      (open_block
        (open_block_marker_start)
        (paragraph_context
          (paragraph
            (inline)))
        (open_block_marker_end)))
    (block_context
      (open_block
        (open_block_marker_start)
        (paragraph_context
          (paragraph
            (inline)))
        (paragraph_context
          (paragraph
            (inline)))
        (open_block_marker_end)))))

==================|||
Listing Block
==================|||

----
printf("Hello, World!");
----

[source,c]
----
printf("Hello, World!");
----

[listing]
--
printf("Hello, World!");
--

[listing]
printf("Hello, World!");

---|||

(document
  (document_body
    (block_context
      (listing_block
        (listing_block_marker_start)
        (listing_block_content)
        (listing_block_marker_end)))
    (block_context
      (listing_block
        (source_attributes
          (source_attribute_name)
          language: (attribute_name))
        (listing_block_marker_start)
        (listing_block_content)
        (listing_block_marker_end)))
    (block_context
      (listing_block
        (element_attributes)
        (open_block
          (open_block_marker_start)
          (paragraph_context
            (paragraph
              (inline)))
          (open_block_marker_end))))
    (block_context
      (listing_block
        (element_attributes)
        (paragraph
          (inline))))))

==================|||
Listing Block Callouts
:skip
==================|||

----
printf("Hello, World!"); <1> <2> <3>
----
<1> This is a callout.
<2> This is a callout. +
    This is a second line of the callout.
<3> This is a callout. +
This is a second line of the callout.

---|||

(document
  (document_body
    (block_context
      (listing_block
        (listing_block_marker_start)
        (listing_block_content)
        (listing_block_marker_end)
        (listing_callout
          (callout_marker)
          (callout_content
            (inline)))
        (listing_callout
          (callout_marker)
          (callout_content
            (inline)
            (line_continuation_marker)
            (inline)))
        (listing_callout
          (callout_marker)
          (callout_content
            (inline)
            (line_continuation_marker)
            (inline)))))))

==================|||
Listing Block Callouts
:skip
==================|||

----
printf("Hello, World!"); <1> <2>
----
<1> This is a callout.
<2> This is a callout. +
    This is a second line of the callout.
<3> This is a callout. +
This is a second line of the callout.
<4> This is a + callout + .
<5>
<6> x
x<7>

<22> This is a callout.

---|||

(document
  (document_body
    (listing_block
      (listing_block_marker_start)
      (listing_block_content
        (paragraph))
      (listing_block_marker_end)
      (listing_callout
        (callout))
      (listing_callout
        (callout)
        (line_continuation_marker))
      (listing_callout
        (callout)
        (line_continuation_marker))
      (listing_callout
        (callout)))
    (paragraph)
    (paragraph)

      ))

==================|||
Literal Block
==================|||

....
Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint.
....

[literal]
--
Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint.
--

[literal]
Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint.

---|||

(document
  (document_body
    (block_context
      (literal_block
        (literal_block_marker_start)
        (paragraph_context
          (paragraph
            (inline)))
        (literal_block_marker_end)))
    (block_context
      (literal_block
        (element_attributes)
        (open_block
          (open_block_marker_start)
          (paragraph_context
            (paragraph
              (inline)))
          (open_block_marker_end))))
    (block_context
      (literal_block
        (element_attributes)
        (paragraph
          (inline))))))

==================|||
Sidebar Block
==================|||

****
Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint.
****

[sidebar]
--
Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint.
--

[sidebar]
Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint.

---|||

(document
  (document_body
    (block_context
      (sidebar_block
        (sidebar_block_marker_start)
        (paragraph_context
          (paragraph
            (inline)))
        (sidebar_block_marker_end)))
    (block_context
      (sidebar_block
        (element_attributes)
        (open_block
          (open_block_marker_start)
          (paragraph_context
            (paragraph
              (inline)))
          (open_block_marker_end))))
    (block_context
      (sidebar_block
        (element_attributes)
        (paragraph
          (inline))))))

==================|||
Example Block
==================|||

====
Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint.
====

[example]
--
Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint.
--

[example]
Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint.

---|||

(document
  (document_body
    (block_context
      (example_block
        (example_block_marker_start)
        (paragraph_context
          (paragraph
            (inline)))
        (example_block_marker_end)))
    (block_context
      (example_block
        (element_attributes)
        (open_block
          (open_block_marker_start)
          (paragraph_context
            (paragraph
              (inline)))
          (open_block_marker_end))))
    (block_context
      (example_block
        (element_attributes)
        (paragraph
          (inline))))))

==================|||
Example Block (1x nested)
==================|||

====
=====
Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint.
=====
====

---|||

(document
  (document_body
    (block_context
      (example_block
        (example_block_marker_start)
        (block_context
          (example_block
            (example_block_marker_start)
            (paragraph_context
              (paragraph
                (inline)))
            (example_block_marker_end)))
        (example_block_marker_end)))))


==================|||
Passthrough Block
==================|||

++++
Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint.
++++

[pass]
Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint.

---|||

(document
  (document_body
    (block_context
      (pass_block
        (pass_block_marker_start)
        (paragraph_context
          (paragraph
            (inline)))
        (pass_block_marker_end)))
    (block_context
      (pass_block
        (element_attributes)
        (paragraph
          (inline))))))
