test/corpus/27_admonitions.txt
==================|||
Admonitions (one line)
==================|||

NOTE: Lorem ipsum dolor sit amet.

TIP: Lorem ipsum dolor sit amet.

IMPORTANT: Lorem ipsum dolor sit amet.

CAUTION: Lorem ipsum dolor sit amet.

WARNING: Lorem ipsum dolor sit amet.

---|||

(document
  (document_body
    (admonition
      (admonition_marker)
      (inline))
    (admonition
      (admonition_marker)
      (inline))
    (admonition
      (admonition_marker)
      (inline))
    (admonition
      (admonition_marker)
      (inline))
    (admonition
      (admonition_marker)
      (inline))))

==================|||
Admonitions (block style)
==================|||

[NOTE]
====
Lorem ipsum dolor sit amet.
====

[NOTE]
--
Lorem ipsum dolor sit amet.
--

[NOTE]
Lorem ipsum dolor sit amet.

---|||

(document
  (document_body
    (admonition
      (admonition_attributes
        (admonition_marker))
      (example_block
        (example_block_marker_start)
        (paragraph_context
          (paragraph
            (inline)))
        (example_block_marker_end)))
    (admonition
      (admonition_attributes
        (admonition_marker))
      (open_block
        (open_block_marker_start)
        (paragraph_context
          (paragraph
            (inline)))
        (open_block_marker_end)))
    (admonition
      (admonition_attributes
        (admonition_marker))
      (paragraph
        (inline)))))
