test/corpus/30_macros.txt
==================
Macro (Block)
:skip
==================

macro::target[]
macro::target[value,value]
macro::target["value 1", value]

---

(document
  (document_body
    (context
      (macro
        (macro_name)
        (macro_target)))
    (context
      (macro
        (macro_name)
        (macro_target)
        (macro_attributes)))
    (context
      (macro
        (macro_name)
        (macro_target)
        (macro_attributes)))))

==================
Image (Block)
==================

image::image.png[]
image::image.png["Alt text",500,600]
image::image.png["Alt text", 500, 600]

---

(document
  (document_body
    (context
      (macro
        (macro_name)
        (macro_target)))
    (context
      (macro
        (macro_name)
        (macro_target)
        (macro_attributes)))
    (context
      (macro
        (macro_name)
        (macro_target)
        (macro_attributes)))))

==================
Audio (Block)
==================

audio::audio.wav[]

audio::ocean-waves.wav[start=60,opts=autoplay]

---

(document
  (document_body
    (context
      (macro
        (macro_name)
        (macro_target)))
    (context
      (macro
        (macro_name)
        (macro_target)
        (macro_attributes)))))

==================
Video (Block)
==================

video::video.avi[]

video::video-file.mp4[width=640,start=60,opts=autoplay]

---

(document
  (document_body
    (context
      (macro
        (macro_name)
        (macro_target)))
    (context
      (macro
        (macro_name)
        (macro_target)
        (macro_attributes)))))

==================
Include (Block)
==================

include::file.adoc[]
include::file.adoc[attribute1,attribute2]
include::file.adoc["attribute text", attribute2]

---

(document
  (document_body
    (context
      (macro
        (macro_name)
        (macro_target)))
    (context
      (macro
        (macro_name)
        (macro_target)
        (macro_attributes)))
    (context
      (macro
        (macro_name)
        (macro_target)
        (macro_attributes)))))

==================
Plantuml (Block)
==================

include::file.puml[format="svg"]

---

(document
  (document_body
    (context
      (macro
        (macro_name)
        (macro_target)
        (macro_attributes)))))
