test/corpus/31_lists.txt
==================
List
==================

* item

---

(document
  (document_body
    (list_context
      (list
        (list_item
          (list_item_marker)
          (list_item_content
            (inline)))))))

==================
List Marker
==================

* item
- item
. item

---

(document
  (document_body
    (list_context
      (list
        (list_item
          (list_item_marker)
          (list_item_content
            (inline)))
        (list_item
          (list_item_marker)
          (list_item_content
            (inline)))
        (list_item
          (list_item_marker)
          (list_item_content
            (inline)))))))

==================
List Nested
==================

* item
** item
*** item

---

(document
  (document_body
    (list_context
      (list
        (list_item
          (list_item_marker)
          (list_item_content
            (inline)))
        (list_context
          (list
          (list_item
            (list_item_marker)
            (list_item_content
              (inline)))
          (list_context
            (list
              (list_item
                (list_item_marker)
                (list_item_content
                  (inline)))))))))))

==================
List with Attributes
==================

[square]
* item
** item

---

(document
  (document_body
    (list_context
      (element_attributes)
      (list
        (list_item
          (list_item_marker)
          (list_item_content
            (inline)))
        (list_item
          (list_item_marker)
          (list_item_content
            (inline)))))))

==================
List Continuation
==================

* List item
+
Lorem ipsum.

---

(document
  (document_body
    (list_context
      (list
        (list_item
          (list_item_marker)
          (list_item_content
            (inline)
            (list_continuation_marker)
            (paragraph_context
              (paragraph
                (inline)))))))))
